Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-129896

Qt 6.8.0 build with ICU enabled fails on Windows

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.8.1, 6.9.0 FF
    • 6.8.0
    • Core: Date/Time
    • None
    • MSVC 2022, ICU75(or 74)
    • Windows
    • 1
    • f38c0fd3f (dev), 01219276f (dev), a6b350acb (6.8), 35a822364 (6.8)
    • Foundation Sprint 117

      Qt 6.8.0 build on Windows fails when ICU is enabled:

      > set ICU_ROOT=c:\ICU
      > configure -skip qtwebengine -skip qt3d -skip qt5compat -skip qtactiveqt -skip qtcoap -skip qtconectivity -skip qtdatavis3d -skip qtdeclarative -skip qtgraphs -skip qtgrpc -skip qthttpserver -skip qtcharts -skip qtlanguageserver -skip qtlocation -skip qtlottie -skip qtmqtt -skip qtmultimedia -skip qtnetworkauth -skip qtopcua -skip qtquick3d -skip qtquick3dphysics -skip qtquickeffectmaker -skip qtquicktimeline -skip qtremoteobjects -skip qtscxml -skip qtsensors -skip qtserialbus -skip qtshadertools -skip qtspeech -skip qtvirtualkeyboard -skip qtwebchannel -skip qtwebsockets -skip qtwebview -skip qtdoc -release -icu
      > cmake --build . --parallel
      

      ends with:

      [801/3231] Linking CXX shared library qtbase\bin\Qt6Core.dll
      FAILED: qtbase/bin/Qt6Core.dll qtbase/lib/Qt6Core.lib
      C:\Windows\system32\cmd.exe /C "cd . && "C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin\cmake.exe" -E vs_link_dll --intdir=qtbase\src\corelib\CMakeFiles\Core.dir --rc=C:\PROGRA~2\WI3CF2~1\10\bin\100226~1.0\x64\rc.exe --mt=C:\PROGRA~2\WI3CF2~1\10\bin\100226~1.0\x64\mt.exe --manifests – C:\PROGRA~1\MICROS~1\2022\COMMUN~1\VC\Tools\MSVC\1441~1.341\bin\Hostx64\x64\link.exe /nologo @CMakeFiles\Core.rsp /out:qtbase\bin\Qt6Core.dll /implib:qtbase\lib\Qt6Core.lib /pdb:qtbase\bin\Qt6Core.pdb /dll /version:6.8 /machine:x64 /INCREMENTAL:NO -DYNAMICBASE -NXCOMPAT -LARGEADDRESSAWARE -OPT:REF -OPT:ICF -GUARD:CF -CETCOMPAT && cd ."
      LINK: command "C:\PROGRA~1\MICROS~1\2022\COMMUN~1\VC\Tools\MSVC\1441~1.341\bin\Hostx64\x64\link.exe /nologo @CMakeFiles\Core.rsp /out:qtbase\bin\Qt6Core.dll /implib:qtbase\lib\Qt6Core.lib /pdb:qtbase\bin\Qt6Core.pdb /dll /version:6.8 /machine:x64 /INCREMENTAL:NO -DYNAMICBASE -NXCOMPAT -LARGEADDRESSAWARE -OPT:REF -OPT:ICF -GUARD:CF -CETCOMPAT /MANIFEST:EMBED,ID=2" failed (exit code 1120) with the following output:
      Creating library qtbase\lib\Qt6Core.lib and object qtbase\lib\Qt6Core.exp
      qtimezoneprivate_icu.cpp.obj : error LNK2019: unresolved external symbol "class QString __cdecl QtTimeZoneLocale::ucalTimeZoneDisplayName(void * *,enum QTimeZone::TimeType,enum QTimeZone::NameType,class QString const &)" (?ucalTimeZoneDisplayName@QtTimeZoneLocale@@YA?AVQString@@PEAPEAXW4TimeType@QTimeZone@@W4NameType@4@AEBV2@@Z) referenced in function "public: virtual class QString __cdecl QIcuTimeZonePrivate::displayName(enum QTimeZone::TimeType,enum QTimeZone::NameType,class QLocale const &)const " (?displayName@QIcuTimeZonePrivate@@UEBA?AVQString@@W4TimeType@QTimeZone@@W4NameType@4@AEBVQLocale@@@Z)
      qtbase\bin\Qt6Core.dll : fatal error LNK1120: 1 unresolved externals
      ninja: build stopped: subcommand failed.
      

        For Gerrit Dashboard: QTBUG-129896
        # Subject Branch Project Status CR V

            Eddy Edward Welbourne
            tumic Martin Tůma
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: