src/corelib/time/qtimezonelocale_p.h
@@ -32,7 +32,7 @@ namespace QtTimeZoneLocale {
 #if QT_CONFIG(icu)
 QString ucalTimeZoneDisplayName(UCalendar *ucal, QTimeZone::TimeType timeType,
                                 QTimeZone::NameType nameType,
-                                const QString &localeCode);
+                                const QByteArray &localeCode);
 #else
 // Define data types for QTZL_data_p.h
 
